# managementSystem

./: CMakeLists.txt
Header File/: Boss.h  Employee.h  Manager.h  Worker.h  WorkerManager.h
Source File/: Boss.cpp  Employee.cpp  ManagementSystem.cpp  Manager.cpp  WorkerManager.cpp
